# QFUDS

./: .gitignore  .gitmodules  .mcp.json  AGENTS.md  CLAUDE.md  Makefile  PROJECT.md  README.md  pyproject.toml
.agent/: README.md  korean-persona.md
.claude/: settings.json
.planning/: PROJECT.md  ROADMAP.md  STATE.md
creative_harness/: README.md  fiction_studio_operating_guide.md  sf_fiction_studio_spec.md
docs/: 00_project_overview.md  README.md  concept_origin.md  decision_log.md  qfuds_ko.md  qfuds_research_report.md  qfuds_v0_3_gamma_laws.md  research_program.md
fiction/: README.md
fiction_zettelkasten_wip/: README.md
outputs/: exp003_R0_P1_gamma0.csv  exp003_R0_P2_gamma0.csv  exp003_R1_P1_information_production_gamma0.02.csv  exp003_R1_P2_information_production_gamma0.02.csv  exp003_R2a_P1_information_production_gamma0.005.csv  exp003_R2a_P2_information_production_gamma0.005.csv  exp003_R2b_P1_information_production_gamma0.01.csv  exp003_R2b_P2_information_production_gamma0.01.csv  exp003_R3_P1_information_production_gamma0.04.csv  exp003_R3_P2_information_production_gamma0.04.csv  exp003_phenomenological_perturbation_summary.json  exp003_stability_diagnostics.csv  exp004_R0_background_growth.csv  exp004_R0_p1_perturbations.csv  exp004_R1_background_growth.csv  exp004_R1_p1_perturbations.csv  exp004_R2_background_growth.csv  exp004_R2_p1_perturbations.csv  exp004_R4_background_growth.csv  exp004_R4_p1_perturbations.csv  exp004_R5_background_growth.csv  exp004_R5_p1_perturbations.csv  exp004_R6_effective_w_reconstruction.csv  exp004_reduction_limits.csv  (+26 more)
(+7810 files in other folders)
