[project]
name = "qfuds"
version = "0.1.0"
description = "Minimal numerical toy model for Quantum Foam Unified Dark Sector research evaluation"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.10",
  "matplotlib>=3.6",
]

[tool.setuptools.packages.find]
include = ["qfuds*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
